# jet-v2

./: .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .prettierrc  Anchor.toml  Cargo.toml  Dockerfile  README.md  SECURITY.md  check  check.sh  codecov.yml  index.html  localnet.toml  modules.html  nx.json  package-lock.json  package.json  run-main-074afd6-raw.txt  run-main-074afd6.txt  run-main-maxpositions-raw.txt  run-main-maxpositions-raw2.txt  run-main-maxpositions-raw3.txt  run-notes.txt  run-pow2-5133d5c5-bpsconversion-raw.txt  run-pow2-5133d5c5-bpsconversion.txt  run-pow2-5133d5c5-bpsconversion2-raw.txt  run-pow2-5133d5c5-maxpositions-raw.txt  run-pow2-afab2581-useconversions-raw.txt  run-pow2-afab2581-useconversions-rounding-raw.txt  run-pow2-afab2581-useconversions.txt  run-pow2-c6a8994-addconversions-raw.txt  run-pow2-c6a8994-addconversions.txt  run_local_validator.sh  setup.sh  style.css  (+4 more)
libraries/bonds-cli/: Cargo.toml
libraries/bonds-cli/src/: lib.rs
libraries/cli/: Cargo.toml
libraries/cli/src/: lib.rs  main.rs
libraries/orderbook-crank/: Cargo.toml
libraries/orderbook-crank/src/: lib.rs  main.rs
libraries/rust-bonds/: Cargo.toml
libraries/rust-bonds/src/: lib.rs  utils.rs
libraries/rust-bonds/src/builder/: ix_builder.rs  mod.rs
libraries/rust-bonds/src/instructions/: event_adapter.rs  metadata.rs  mod.rs  orderbook.rs  tickets.rs
libraries/rust-bonds/src/transactions/: event_adapter.rs  metadata.rs  orderbook.rs  tickets.rs
libraries/rust/bonds-sdk/: Cargo.toml
libraries/rust/bonds-sdk/src/: lib.rs
programs/airspace/: Cargo.toml
programs/airspace/src/: events.rs  lib.rs  state.rs
programs/airspace/src/instructions/: airspace_create.rs  airspace_permit_create.rs  airspace_permit_issuer_create.rs  airspace_permit_issuer_revoke.rs  airspace_permit_revoke.rs  airspace_set_authority.rs  airspace_set_directives.rs  create_governor_id.rs  mod.rs  set_default_directives.rs  set_governor.rs
programs/auth/: Cargo.toml
programs/auth/src/: events.rs  lib.rs
programs/bonds/: Cargo.toml
programs/bonds-metadata/: Cargo.toml
programs/bonds-metadata/src/: lib.rs
programs/bonds/src/: bond_token_manager.rs  errors.rs  events.rs  instructions.rs  lib.rs  margin.rs  market_token_manager.rs  serialization.rs  utils.rs
programs/bonds/src/control/: events.rs  mod.rs  state.rs
programs/bonds/src/margin/: events.rs  mod.rs  origination_fee.rs  state.rs
programs/bonds/src/orderbook/: events.rs  mod.rs  state.rs
programs/bonds/src/tickets/: events.rs  mod.rs  state.rs
programs/control/: Cargo.toml
programs/control/src/: events.rs  instructions.rs  lib.rs
programs/control/src/instructions/: configure_margin_pool.rs  configure_token.rs  create_authority.rs  create_bond_market.rs  create_margin_pool.rs  initialize_bond_orderbook.rs  register_adapter.rs  register_orderbook_crank.rs  register_token.rs  set_liquidator.rs
programs/fixed-term/: Cargo.toml
programs/fixed-term/src/: errors.rs  instructions.rs  lib.rs  market_token_manager.rs  serialization.rs  utils.rs
programs/fixed-term/src/control/: events.rs  mod.rs  state.rs
programs/fixed-term/src/margin/: events.rs  mod.rs  origination_fee.rs  repay.rs  state.rs
programs/fixed-term/src/orderbook/: events.rs  mod.rs  state.rs
programs/fixed-term/src/tickets/: events.rs  mod.rs  state.rs
programs/margin/: Cargo.toml
programs/margin-orca/: Cargo.toml
programs/margin-orca/src/: instructions.rs  lib.rs  state.rs
programs/margin-pool/: Cargo.toml
programs/margin-pool/src/: events.rs  instructions.rs  lib.rs  state.rs  util.rs
programs/margin-pool/src/instructions/: collect.rs  (+13 more)
programs/margin-swap/: Cargo.toml
programs/margin-swap/src/: events.rs  instructions.rs  lib.rs
programs/margin/src/: adapter.rs  events.rs  instructions.rs  lib.rs  seeds.rs  state.rs  syscall.rs  util.rs
programs/metadata/: Cargo.toml
programs/metadata/src/: lib.rs
programs/mock-pyth/: Cargo.toml
programs/mock-pyth/src/: lib.rs
programs/rewards/: Cargo.toml
programs/rewards/src/: events.rs  instructions.rs  lib.rs  state.rs
programs/spl-swap-max/: Cargo.toml
programs/spl-swap-max/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: events.rs  instructions.rs  lib.rs  spl_addin.rs  state.rs
programs/test-service/: Cargo.toml
programs/test-service/src/: error.rs  lib.rs  util.rs
tests/bonds-test-framework/: Cargo.toml
tests/bonds-test-framework/src/: lib.rs  transactions.rs
tests/hosted/: Cargo.toml  build_on_localnet.sh  localnet_lib.sh  test_on_localnet.sh
tests/hosted/src/: actions.rs  asynchronous.rs  bonds.rs  context.rs  environment.rs  fixed_market.rs  fixed_term.rs  lib.rs  load.rs  margin.rs  mock_adapter_ix.rs  openbook.rs  orca_whirlpool_swap.rs  orchestrator.rs  pricing.rs  runtime.rs  saber_swap.rs  serum.rs  setup_helper.rs  spl_swap.rs  swap.rs  test_user.rs  tokens.rs  transaction_builder.rs  util.rs
tests/hosted/tests/: bonds.rs  client_fixed_term.rs  client_sanity.rs  client_swap.rs  combined.rs  fixed_market.rs  fixed_term.rs  liquidate.rs  liquidate_with_swap.rs  load.rs  lookup_table.rs  margin_account_airspace_migration.rs  margin_repay.rs  mod.rs  orca_whirlpool_swap.rs  pool_overpayment.rs  pools.rs  positions.rs  rounding.rs  route_swap.rs  saber_swap.rs  sanity.rs  serum_swap.rs  spl_swap.rs  swap.rs  test_service.rs  whirlpool.rs  whirlpool_liquidity.rs  whirlpool_swap.rs
tests/load-test/: Cargo.toml
tests/mock-adapter/: Cargo.toml
tests/mock-adapter/src/: lib.rs
tools/crank-service/: Cargo.toml
tools/crank-service/src/: client.rs  consumer.rs  lib.rs  main.rs
tools/ctl/: Cargo.toml  generate-app-configs.sh
tools/ctl/src/: anchor_ix_parser.rs  app_config.rs  client.rs  config.rs  governance.rs  ix_inspection_hooks.rs  ix_inspectors.rs  lib.rs  serum.rs
tools/jet-alt-registry-client/: Cargo.toml
tools/jet-alt-registry-client/src/: actions.rs  addresses.rs  client.rs  lib.rs  main.rs
tools/oracle-mirror/: Cargo.toml
tools/oracle-mirror/src/: lib.rs  main.rs
(+3202 files in other folders)
