[workspace]
members = [
    "programs/*",
    "tests/hosted",
    "tests/mock-adapter",
    "libraries/rust/*",
    "libraries/ts/fixed_term/wasm-utils",
    "tools/*"
]

[patch.crates-io]
# This is to force saber and other libs to use our anchor version
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "temp-version-bump-1-11" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "temp-version-bump-1-11" }
