[package]
name = "jet-bonds-cli"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "main"

[dependencies]
anyhow = "1"
clap = { version = "3.1", features = ["derive"] }
shellexpand = "2.1.0"

solana-client = "1.10"
solana-clap-utils = "1.10"
solana-sdk = "1.10"

jet-bonds = { path = "../../programs/bonds", features = ["no-entrypoint"]}
jet-bonds-lib = { path = "../rust-bonds", features = ["builder"] }