[package]
name = "jet-bonds-orderbook-crank"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = "2.33.3"
solana-clap-utils = "1.7.11"
anchor-client = { git = "https://github.com/jet-lab/anchor", branch = "master" }
agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }
bytemuck = { version = "1.7", features = ["derive"] }
borsh = "0.9.1"
rand = "0.8.5"

jet-bonds = { path = "../../programs/bonds" }
jet-bonds-metadata = { path = "../../programs/bonds-metadata" }
jet-bonds-lib = { path = "../../libraries/rust-bonds" }
