[package]
name = "jet-bonds-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }
borsh = "0.9.1"
bytemuck = { version = "1.7", features = ["derive"] }
solana-sdk = "1.9"
spl-token = "3.1.0"
spl-associated-token-account = "1.0"

jet-bonds = { path = "../../programs/bonds", features = ["no-entrypoint"] }
jet-bonds-metadata = { path = "../../programs/bonds-metadata", features = ["no-entrypoint"] }

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
