[package]
name = "jet-bonds-lib"
version = "0.1.0"
edition = "2021"

[features]
builder = [
    "agnostic-orderbook",
    "anchor-lang",
    "jet-margin-bonds",
    "jet-margin-bonds-metadata",
    "thiserror",
    "solana-sdk",
    "spl-token",
    "spl-associated-token-account",
]
utils = ["jet-proto-math"]


[dependencies]

# Builder 
agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"], optional = true }
thiserror = { version = "1", optional = true }
solana-sdk = { version = "1.9", optional = true }
spl-token = { version = "3.1.0", optional = true }
spl-associated-token-account = { version = "1.0", optional = true }

jet-margin-bonds = { path = "../../programs/margin-bonds", features = ["no-entrypoint"], optional = true }
jet-margin-bonds-metadata = { path = "../../programs/margin-bonds-metadata", features = ["no-entrypoint"], optional = true }

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master", optional = true }


# utils
jet-proto-math = { git = "https://github.com/jet-lab/program-libraries", branch = "fixed-point-math", features = ["fixed-point"], optional = true }
