[package]
name = "jet-airspace"
version = "0.1.0"
description = "Permissions program for Jet Protocol "
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_airspace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []
devnet = ["jet-program-common/devnet"]

[dependencies]
solana-program = "1.14"
anchor-lang = { version = "0.27", features = ["init-if-needed"] }

jet-program-common = { path = "../../libraries/rust/program-common" }
