[package]
name = "jet-bonds"
version = "0.1.0"
description = "Jet Bonds Orderbook and Ticket programs"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_bonds"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []
cli = ["no-entrypoint", "serde"]
mock-margin = []
testing = ["jet-margin/testing"]

[dependencies]
arrayref = "0.3.6"
bitflags = "1.0.3"
borsh = "0.9.1"
bytemuck = {version = "1.7.2", features = ["derive"]}
num-derive = "0.3.3"
num-traits = "0.2"
pyth-sdk-solana = "0.6"
serde = { version = "1.0", optional = true }

agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "temp-version-bump-1-11" }
anchor-spl =  { git = "https://github.com/jet-lab/anchor", branch = "temp-version-bump-1-11" }

jet-proto-math = { git = "https://github.com/jet-lab/program-libraries", branch = "fixed-point-math-uint-091", features = ["traits"] }

jet-margin = { path = "../margin", features = ["no-entrypoint"] }

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
itertools = "*"
