[package]
name = "jet-control"
version = "1.0.0"
description = "Adminstrative program for Jet Protocol"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_control"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = [
    "jet-metadata/testing",
    "jet-market/testing",
    "jet-margin-pool/testing"
]
devnet = []

[dependencies]
solana-program = "1.10"
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "master" }

jet-metadata = { path = "../metadata", features = ["cpi"] }
jet-market = { path = "../fixed_market", features = ["cpi"] }
jet-margin-pool = { path = "../margin-pool", features = ["cpi"] }
