[package]
name = "jet-control"
version = "1.0.0"
description = "Adminstrative program for Jet Protocol"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_control"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = [
    "jet-metadata/testing",
    "jet-fixed-term/testing",
    "jet-margin-pool/testing"
]
devnet = ["jet-program-common/devnet"]

[dependencies]
solana-program = "1.14"
anchor-lang = "0.26"
anchor-spl = "0.26"

jet-program-common = { path = "../../libraries/rust/program-common" }

jet-metadata = { path = "../metadata", features = ["cpi"] }
jet-fixed-term = { path = "../fixed-term", features = ["cpi"] }
jet-margin-pool = { path = "../margin-pool", features = ["cpi"] }
