[package]
name = "jet-margin-orca"
version = "1.0.0"
description = "Anchor program to provide liquidity on Orca's concentrated pools"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_margin_orca"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = ["jet-margin-pool/testing", "jet-margin/testing"]
devnet = ["jet-static-program-registry/devnet", "anchor-spl/devnet"]

[dependencies]
bytemuck = "1"

anchor-lang = "0.27"
anchor-spl = "0.27"

pyth-sdk-solana = "0.7.2"

jet-airspace = { path = "../airspace", features = ["no-entrypoint"] }
jet-margin-pool = { path = "../margin-pool", features = ["cpi", "no-entrypoint"] }
jet-margin = { path = "../margin", features = ["cpi", "no-entrypoint"] }

jet-static-program-registry = { path = "../../libraries/rust/static-program-registry" }
jet-program-common = { path = "../../libraries/rust/program-common" }

orca-whirlpool = { package = "whirlpool", git = "https://github.com/jet-lab/whirlpools", branch = "anchor-27", features = ["cpi"] }