[package]
name = "jet-margin-pool"
version = "1.0.0"
description = "Lending pools for margin accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_margin_pool"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = ["jet-margin/testing", "jet-metadata/testing"]
cli = ["no-entrypoint", "serde"]
devnet = []

[dependencies]
bytemuck = "1.7"
static_assertions = "1.1"
bitflags = "1.3"
serde = { version = "1.0", optional = true }

anchor-lang = "0.26"
anchor-spl = "0.26"
solana-program = "1.14"

pyth-sdk-solana = "0.7"

jet-program-common = { path = "../../libraries/rust/program-common" }
jet-margin = { path = "../margin", features = ["cpi"] }
jet-metadata = { path = "../metadata", features = ["cpi"] }

[dev-dependencies]
serde = "1.0"
serde_test = "1.0"
