[package]
name = "jet-margin-swap"
version = "0.1.0"
description = "Anchor program to swap margin pool deposits via spl token swap"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_margin_swap"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = ["jet-margin-pool/testing", "jet-margin/testing"]
devnet = ["jet-static-program-registry/devnet"]

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "master" }

jet-margin-pool = { path = "../margin-pool", features = ["cpi", "no-entrypoint"] }
jet-margin = { path = "../margin", features = ["cpi", "no-entrypoint"] }

jet-static-program-registry = { path = "../../libraries/static-program-registry" }
