[package]
name = "jet-margin-swap"
version = "1.1.0"
description = "Anchor program to swap margin pool deposits via spl token swap"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_margin_swap"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = ["jet-margin-pool/testing", "jet-margin/testing"]
devnet = ["jet-static-program-registry/devnet", "anchor-spl/devnet"]

[dependencies]
bytemuck = "1"

anchor-lang = "0.26"
anchor-spl = { version = "0.26", features = ["dex"] }

jet-margin-pool = { path = "../margin-pool", features = ["cpi", "no-entrypoint"] }
jet-margin = { path = "../margin", features = ["cpi", "no-entrypoint"] }

jet-static-program-registry = { path = "../../libraries/rust/static-program-registry" }
jet-program-common = { path = "../../libraries/rust/program-common" }

# Saber, commit from 18 Sep 2022 , rev = "c790c9009abab26dc0d6fe1a7749ea01a4ae5f9f"
saber-stable-swap = { package = "stable-swap-anchor", git = "https://github.com/jet-lab/stable-swap", branch = "master" }
