[package]
name = "jet-margin"
version = "1.0.0"
description = "Manager for margin accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_margin"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
testing = []
cli = ["no-entrypoint", "serde"]
devnet = []

[dependencies]
static_assertions = "1.1.0"
bytemuck = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
bitflags = "1.3"

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "temp-version-bump-1-11", features = [
    "init-if-needed",
] }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "temp-version-bump-1-11" }

pyth-sdk-solana = { git = "https://github.com/nevi-me/pyth-sdk-rs", branch = "solana-1-11" }

jet-proto-math = { git = "https://github.com/jet-lab/program-libraries", branch = "fixed-point-math-uint-091", features = ["number-128"] }
jet-proto-proc-macros = "1"
jet-metadata = { path = "../metadata", features = ["no-entrypoint"] }
jet-airspace = { path = "../airspace", features = ["no-entrypoint"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_test = "1.0"
itertools = "*"
