[package]
name = "jet-margin"
version = "1.0.0"
description = "Manager for margin accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_margin"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
testing = []
cli = ["no-entrypoint", "serde"]
devnet = ["jet-program-common/devnet"]
mock_syscall = []
test = ["mock_syscall"]

[dependencies]
static_assertions = "1.1.0"
bytemuck = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
bitflags = "1.3"

anchor-lang = { version = "0.26", features = [
    "init-if-needed",
] }
anchor-spl = "0.26"
solana-program = "1.14"

pyth-sdk-solana = "0.7"

jet-program-proc-macros = { path = "../../libraries/rust/program-proc-macros" }
jet-program-common = { path = "../../libraries/rust/program-common" }

jet-metadata = { path = "../metadata", features = ["no-entrypoint"] }
jet-airspace = { path = "../airspace", features = ["no-entrypoint"] }

lookup-table-registry = { git = "https://github.com/jet-lab/lookup-table-registry", branch = "main", features = ["cpi"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_test = "1.0"
itertools = "*"
