[package]
name = "jet-metadata"
version = "1.0.0"
description = "Program to map arbitrary data to accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_metadata"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
testing = []
devnet = []

[dependencies]
anchor-lang = "0.26"
solana-program = "1.14"
