[package]
name = "jet-rewards"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_rewards"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
testing = []
devnet = []
cli = ["no-entrypoint", "serde"]

[dependencies]
anchor-lang = "0.27"
anchor-spl = "0.27"
bytemuck = "1.7"
bitflags = "1.3"
serde = { version = "1.0", optional = true }
static_assertions = "1"

jet-staking = { path = "../staking", features = ["cpi"] }
jet-program-common = { path = "../../libraries/rust/program-common" }
jet-program-proc-macros = { path = "../../libraries/rust/program-proc-macros" }
