[package]
name = "jet-staking"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_staking"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
testing = []
devnet = []
cli = ["no-entrypoint", "serde"]

[dependencies]
anchor-lang = "0.27"
anchor-spl = "0.27"
solana-program = "1.9"

spl-governance = "3.1"
spl-governance-addin-api = "0.1"
spl-governance-tools = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }

jet-auth = { path = "../auth", features = ["cpi"] }