[package]
name = "jet-test-service"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_test_service"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []
devnet = ["jet-program-common/devnet"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", branch = "master" }

pyth-sdk-solana = "0.7"
bytemuck = "1.7"

spl-token-swap = { version = "2.1", features = ["no-entrypoint"] }
jet-program-common = { path = "../../libraries/rust/program-common" }