[package]
name = "jet-test-service"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_test_service"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []
devnet = ["jet-program-common/devnet"]

[dependencies]
anchor-lang = "0.27"
anchor-spl = { version = "0.27", features = ["dex"] }
openbook = { package = "serum_dex", git = "https://github.com/openbook-dex/program", branch = "master", features = ["no-entrypoint"] }

pyth-sdk-solana = "0.7"
bytemuck = "1.7"

saber-stable-swap = { package = "stable-swap-anchor", git = "https://github.com/jet-lab/stable-swap", branch = "master" }
saber-stable-client = { package = "stable-swap-client", git = "https://github.com/jet-lab/stable-swap", branch = "master" }

jet-program-common = { path = "../../libraries/rust/program-common" }
jet-static-program-registry = { path = "../../libraries/rust/static-program-registry" }
