[package]
name = "bonds-test-framework"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1"
agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }
borsh = "0.9.1"
bytemuck = { version = "1.7", features = ["derive"] }
rand = "0.8.5"
shellexpand = "2.1.0"
solana-sdk = "1.9"
spl-token = "3.1.0"
spl-associated-token-account = "1.0"
tokio = { version = "1", features = ["macros"] }

anchor-client = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl =  { git = "https://github.com/jet-lab/anchor", branch = "master" }

jet-simulation = { git = "https://github.com/jet-lab/jet-simulation", branch = "master" }
jet-proto-math = { git = "https://github.com/jet-lab/program-libraries", branch = "fixed-point-math", features = ["fixed-point"] }

jet-bonds = { path = "../../programs/bonds", features = ["devnet", "no-entrypoint"] }
jet-bonds-lib = { path = "../../libraries/rs", features = ["builder", "utils"] }
jet-bonds-metadata = { path = "../../programs/metadata", features = ["devnet", "no-entrypoint"] }
jet-bonds-orderbook-crank = { path = "../../cranks/orderbook" }
