[package]
name = "bonds-test-framework"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1"
agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }
async-trait = "0.1"
borsh = "0.9.1"
bytemuck = { version = "1.7", features = ["derive"] }
rand = "0.8.5"
serial_test = "0.9.0"
shellexpand = "2.1.0"
solana-sdk = "1.10"
spl-token = "3.1.0"
spl-associated-token-account = "1.0"
tokio = { version = "1", features = ["macros", "time"] }

anchor-client = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl =  { git = "https://github.com/jet-lab/anchor", branch = "master" }

jet-simulation = { git = "https://github.com/jet-lab/jet-simulation", branch = "master" }
jet-proto-math = { git = "https://github.com/jet-lab/program-libraries", branch = "fixed-point-math", features = ["fixed-point"] }

jet-bonds = { path = "../../programs/bonds", features = ["devnet", "no-entrypoint"] }
jet-bonds-lib = { path = "../../libraries/rust/bonds" }

jet-margin = { path = "../../programs/margin", features = ["no-entrypoint", "testing"] }
jet-control = { path = "../../programs/control", features = ["no-entrypoint", "testing"] }
jet-metadata = { path = "../../programs/metadata", features = ["no-entrypoint", "testing"] }
jet-margin-sdk = { path = "../../libraries/rust/margin", features = ["testing"] }
