[package]
name = "hosted-tests"
version = "0.1.0"
edition = "2021"

[features]
test = []
default = ["test"]
localnet = []
batch_all = []
batch1 = []
batch2 = []

[dependencies]
async-recursion = "1"
async-trait = "0.1.56"
bincode = "1.3"
base64 = "0.13"
bytemuck = "1"
futures = "0.3"
futures-retry = "0.6"
parking_lot = "0.12"
anyhow = { version = "1", features = ["backtrace"] }
rand = "0.7"
rand_distr = "0.3.0"
lazy_static = "1.4.0"
shellexpand = "2.1.0"
env_logger = "0.9"
solana-clap-utils = "1.14"
serde_json = "1"

tokio = { version = "1", features = ["macros", "time"] }
serial_test = "0.6.0"

solana-sdk = "1.14"
solana-client = "1.14"
solana-cli-config = "1.14"

agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }

anchor-lang = "0.26"
anchor-spl = { version = "0.26", features = ["dex", "devnet"] }

jet-static-program-registry = { path = "../../libraries/rust/static-program-registry" }
spl-token = "3.1.0"
spl-associated-token-account = "1.0"
saber-client = { package = "stable-swap-client", git = "https://github.com/jet-lab/stable-swap", branch = "master" }
saber-program = { package = "stable-swap", git = "https://github.com/jet-lab/stable-swap", branch = "master" }
pyth-sdk-solana = "0.7"

jet-fixed-term = { path = "../../programs/fixed-term", features = ["no-entrypoint", "testing"] }
jet-control = { path = "../../programs/control", features = ["no-entrypoint", "testing"] }
jet-margin = { path = "../../programs/margin", features = ["no-entrypoint"] }
jet-margin-pool = { path = "../../programs/margin-pool", features = ["no-entrypoint", "testing"] }
jet-margin-swap = { path = "../../programs/margin-swap", features = ["no-entrypoint", "devnet", "testing"] }
jet-metadata = { path = "../../programs/metadata", features = ["no-entrypoint", "testing"] }
jet-airspace = { path = "../../programs/airspace", features = ["no-entrypoint", "testing"] }
jet-test-service = { path = "../../programs/test-service", features = ["no-entrypoint"] }

jet-instructions = { path = "../../libraries/rust/instructions" }
jet-solana-client = { path = "../../libraries/rust/solana-client" }
jet-client = { path = "../../libraries/rust/client" }
jet-client-native = { path = "../../libraries/rust/client-native" }
jet-margin-sdk = { path = "../../libraries/rust/margin", features = ["testing"] }
jet-environment = { path = "../../libraries/rust/environment" }
jet-program-common = { path = "../../libraries/rust/program-common" }

mock-adapter = { path = "../mock-adapter", features = ["no-entrypoint"] }

jet-simulation = { path = "../../libraries/rust/simulation" }

itertools = "0.10.3"