[package]
name = "hosted-tests"
version = "0.1.0"
edition = "2021"

[features]
test = []
default = ["test"]
localnet = []
batch_all = []
batch1 = []
batch2 = []

[dependencies]
async-recursion = "1"
async-trait = "0.1.56"
bincode = "1.3"
base64 = "0.13"
bytemuck = "1"
futures = "0.3"
futures-retry = "0.6"
parking_lot = "0.12"
anyhow = { version = "1", features = ["backtrace"] }
rand = "0.7"
rand_distr = "0.3.0"
lazy_static = "1.4.0"
shellexpand = "2.1.0"
env_logger = "0.9"
solana-program = { workspace = true }
serde_json = "1"

tokio = { version = "1", features = ["macros", "time"] }
serial_test = "0.6.0"

solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-cli-config = { workspace = true }

agnostic-orderbook = { git = "https://github.com/jet-lab/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }

anchor-lang = { workspace = true }
anchor-spl = { version = "0.26", features = ["dex", "devnet"] }

jet-static-program-registry = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
saber-client = { package = "stable-swap-client", git = "https://github.com/jet-lab/stable-swap", branch = "master" }
saber-program = { package = "stable-swap", git = "https://github.com/jet-lab/stable-swap", branch = "master" }
pyth-sdk-solana = { workspace = true }

jet-fixed-term = { workspace = true, features = ["testing"] }
jet-control = { workspace = true, features = ["testing"] }
jet-margin = { workspace = true }
jet-margin-pool = { workspace = true }
jet-margin-swap = { workspace = true }
jet-metadata = { workspace = true }
jet-airspace = { workspace = true, features = ["testing"] }
jet-test-service = { workspace = true }

jet-instructions = { workspace = true }
jet-solana-client = { workspace = true }
jet-client = { workspace = true }
jet-client-native = { workspace = true }
jet-margin-sdk = { workspace = true }
jet-environment = { workspace = true }
jet-program-common = { workspace = true }

mock-adapter = { path = "../mock-adapter", features = ["no-entrypoint"] }

jet-simulation = { workspace = true }

itertools = "0.10.3"